--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,10 +1,33 @@
 .header{
     position: fixed;
     width: 100%;
-    height: 150px;
+    height: 120px;
     outline: blue solid;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    
+    &__title{
+        padding-left: 30px;
+        display: flex;
+        align-self: center;
+    }
 }
 .nav{
-    outline: green solid;
+    width: 100%;
+    max-width: 900px;
+    padding: 10px;
+    margin-right: 10px;
+
+    &__list{
+        list-style-type: none;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    &__link>a{
+        text-decoration: none; 
+    }
+    
 }
 
