--- a/style/_base.scss
+++ b/style/_base.scss
@@ -10,6 +10,8 @@ main{
     width:100%;
     max-width: 1773px;
     margin: 0 auto;
+    margin-left: 160px; /*same as the width of the sidenav*/
+    padding: 0px 10px;
 }
 h1{
     font-size: 48px;
