--- a/style/_profile.scss
+++ b/style/_profile.scss
@@ -1,7 +1,20 @@
 .profile{
     width: 100%;
     max-width: 1773px;
+    min-height: 800px;
     outline: orange solid;
     display: flex;
     align-items: center;
+
+    &__wrapper{
+        margin-top: 90px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+}
+.pic{
+    overflow: hidden;
+    
 }
