--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,24 +1,29 @@
 .header{
-    position: fixed;
-    margin-bottom: 80px;
     width: 100%;
-    height: 120px;
-    outline: blue solid;
+    max-width: 1773px;
+    height: 100px;
+    margin: 0 auto;
+
+    &__wrapper{
+    width: 100%;
+    max-width: 1770px;
+    min-height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: end;
-    
+    }
+
     &__title{
         padding-left: 30px;
-        display: flex;
-        align-self: center;
+    }
+
+    &__span{
+        font-size: 20px;
     }
 }
 .nav{
     width: 100%;
     max-width: 900px;
-    padding: 10px;
-    margin-right: 10px;
 
     &__list{
         list-style-type: none;
