changed theme colors

--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,4 +1,4 @@
 $main-font: "Georgia", serif;
 $secondary-font: "Garamond", serif;
-$theme-color: #4169e1; 
-$secondary-color: #6941e1;
+$theme-color: #2C3E50; 
+$secondary-color: #F5F5DC;
