--- a/style/_base.scss
+++ b/style/_base.scss
@@ -5,12 +5,12 @@ body{
     margin: 0 auto;
     font-family: variables.$main-font;
     box-sizing: border-box;
+    background-color: #B3CDE0;
 }
 main{
     width:100%;
     max-width: 1773px;
     margin: 0 auto;
-    outline: orange solid;
 }
 h1{
     font-size: 38px;
@@ -33,8 +33,8 @@ button{
     font-family: variables.$secondary-font;
     font-size: 16px;
     line-height: 26px;
-    color: #FFFFFF;
-    background-color: variables.$theme-color;
+    color: variables.$theme-color;
+    background-color: variables.$secondary-color;
     padding: 20px;
     border: none;
     text-transform: uppercase;
