--- a/style/index.scss
+++ b/style/index.scss
@@ -2,5 +2,9 @@
 @import 'base';
 @import 'header';
 @import 'profile';
+@import 'development';
+@import 'resume';
+@import 'contact';
+@import 'footer';
 
 
