--- a/style/_base.scss
+++ b/style/_base.scss
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -26,6 +30,7 @@ h2{
 p{
     font-size: 16;
     line-height: 26px;
+    padding: 30px;
 }
 button{
     width: 100%;
