--- a/style/_base.scss
+++ b/style/_base.scss
@@ -25,7 +25,7 @@ h2{
     font-family: variables.$secondary-font;
     font-size: 30px;
     line-height: 26px;
-    color: variables.$secondary-color;
+    color: variables.$theme-color;
 }
 p{
     font-size: 16;
@@ -49,4 +49,12 @@ button:hover{
 }
 button:focus{
     background-color: #839deb;
+}
+.sticky{
+    position:fixed;
+    top: 0;
+    width: 100%;
+}
+.sticky+ main{
+    padding-top: 45px;
 }
