--- a/style/index.scss
+++ b/style/index.scss
@@ -2,6 +2,7 @@
 @import 'base';
 @import 'header';
 @import 'profile';
+@import 'phd';
 @import 'development';
 @import 'resume';
 @import 'contact';
