--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,9 +1,10 @@
 .header{
     width: 100%;
-    height: 6rem;
+    height: 8rem;
     margin: 0 auto;
     display: flex;
     align-items: center;
+    background-color: #B3CDE0;
 
     &__wrapper{
     width: 100%;
@@ -11,12 +12,13 @@
     min-height: 6rem;
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: center;
     }
 
     &__title{
-        padding-left: 30px;
+        padding-left: 20px;
         font-weight: 700;
+        font-size: 30px;
     }
 
     &__span{
@@ -28,18 +30,27 @@
     max-width: 900px;
     height: 3rem;
     padding-left: 30px;
+    padding-top: 40px;
+    
 
     &__list{
         list-style-type: none;
         display: flex;
         justify-content: space-evenly;
+        align-items: end;
+        text-decoration: none;
     }
 
     &__link>a{
         text-decoration: none; 
+        color: navy;
+        
     }
     &__link>a:hover{
-        color: variables.$secondary-color;
+        color: variables.$theme-color;
+        background-color: variables.$secondary-color;
+        padding: 5px;
+        border-radius: 4px;
     }    
 }
 
