--- a/style/_profile.scss
+++ b/style/_profile.scss
@@ -1,18 +1,33 @@
 .profile{
-    width: 100%;
-    max-width: 1773px;
-    min-height: 800px;
-    outline: green solid;
+    margin: 0 auto;
+    height: 700px;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
+    background: linear-gradient(
+        to bottom,
+        #B3CDE0 0%, 
+        #B3CDE0 30%,
+        variables.$theme-color 30%,
+        variables.$theme-color 100%
+     ); ;
 
     &__wrapper{
-        margin-top: 90px;
+        max-width: 1700px;
+        padding: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        
+    }
+    &__text{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: space-evenly;
+        padding-left: 20px;
+        color: variables.$secondary-color;
     }
 }
-.pic{
-    overflow: hidden;
+.profile__text{
+    width: 500px;
 }
