--- a/style/_phd.scss
+++ b/style/_phd.scss
@@ -1,15 +1,24 @@
 .phd{
+    margin: 0 auto;
     width: 100%;
-    height: 600px;
+    min-height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    outline: blue solid;
 
     &__wrapper{
         max-width: 700px;
         height: 400px;
         text-align: center;
     }
+    &__images{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+.phd__images img{
+    width: 400px;
+    height: 300px;
 }
