--- a/style/index.scss
+++ b/style/index.scss
@@ -3,6 +3,7 @@
 @import 'header';
 @import 'profile';
 @import 'phd';
+@import 'pub';
 @import 'development';
 @import 'resume';
 @import 'contact';
